[package]
name = "naga-ffi"
version = "0.1.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
edition = "2021"
publish = false

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]

[dependencies.naga]
version = "24.0.0"
features = ["glsl-in", "spv-in", "wgsl-in", "spv-out", "wgsl-out", "msl-out", "glsl-out"]
